# CrabNet

./: .releaserc.json  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Source/: BitStream.cpp  StolenNetwork.cpp
Source/Plugins/: FileList.cpp
Source/Utils/: Rand.cpp  _FindFirst.cpp
include/raknet/: StolenNetwork.h
lib/: CMakeLists.txt
